[package]
name = "rust-ethereum-opensea"
version = "0.1.0"
authors = ["akiho <aki030402@mail.com>"]
description = "Ethereum OpenSea CLI"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
thiserror = "1.0.24"
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
aws-config = "0.51.0"
aws-sdk-lambda = "0.21.0"
hex-literal = "0.3.4"
bigdecimal = "0.3.0"
regex = "1"
reqwest = "0.11.10"
strum = "0.24.1"
strum_macros = "0.24.3"
base64 = "0.13.1"
web3 = "0.18.0"
secp256k1 = { version = "0.21.3", features = ["rand", "rand-std"] }
clap = { version = "3.2.23", features = ["derive"] }