[package]
name = "rust-ethereum"
version = "0.1.0"
authors = ["akiho <aki030402@mail.com>"]
description = "Ethereum OpenSea CLI"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "common" }
impl_ethers_rs = { path = "impl_ethers_rs" }
impl_rust_web3 = { path = "impl_rust_web3" }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
thiserror = "1.0.24"
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
reqwest = { version = "0.11.13", default-features = false, features = ["rustls-tls", "json", "multipart"] }
strum = "0.24.1"
strum_macros = "0.24.3"
base64 = "0.21.0"
url = { version = "2.2.2", features = ["serde"] }
clap = { version = "3.2.23", features = ["derive"] }
rand = "0.8.5"