[package]
name = "impl_ethers_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prelude = { path = "../prelude" }
ethers = { version = "2.0.4", features = ["legacy"] }
ethers-signers = "2.0.4"
ethers-providers = { version = "2.0.4", features = ["ws"] }
thiserror = "1.0.24"
serde_json = "1.0.64"