[package]
name = "impl_rust_web3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.18.0"
secp256k1 = { version = "0.21.3", features = ["rand", "rand-std"] }
strum = "0.24.1"
strum_macros = "0.24.3"
bigdecimal = "0.3.0"
regex = "1"
thiserror = "1.0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"